# mypy_coverage

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  action.yml  codecov.yml  mypy_coverage.py  pyproject.toml
.claude/skills/bump-deps/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
conda-recipe/: README.md  meta.yaml
docs/: regenerate-sample-output.sh
src/mypy_coverage/: __init__.py  __main__.py  cli.py  config.py  discovery.py  models.py  render.py  report.py  scanner.py  silent_any.py
tests/: conftest.py  test_cli.py  test_config.py  test_discovery.py  test_main_module.py  test_render.py  test_report.py  test_scanner.py  test_silent_any.py
tests/fixtures/: empty.py  exact_50pct.py  fully_annotated.py  fully_unannotated.py  long_bodies.py  nested.py  overloads_and_decorators.py  short_bodies.py  silent_any_sources.py  syntax_broken.py  with_partials.py
